--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class='container'>
-        <h1>Enter a user to display their public repositories</h1>
+        <h1>Enter a GitHub handle to display their public repositories</h1>
 
         <form id="js-form">
             <label for="username">Enter a username</label>
@@ -21,7 +21,7 @@
         <section id='results' class='hidden'>
             <h2>Search Results</h2>
             <ul id='results-list'>
-                
+
             </ul>
         </section>
     </div>
